feat: add translatable strings AB#14484

--- a/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
@@ -6,7 +6,9 @@
       (click)="closePopover()"
       class="popover-close-button"
     ></ion-icon>
-    <ion-card-title>Action Result</ion-card-title>
+    <ion-card-title>{{
+      'chat-component.common.save-action.header' | translate
+    }}</ion-card-title>
   </ion-card-header>
   <ion-card-content class="ion-padding-top ion-text-center">
     <ion-item lines="none">
