--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -9,7 +9,9 @@
     'is-spoken': animate && isSpoken,
     'is-warn': isWarn,
     'is-stopped': isStopped,
-    'is-triggered': isTriggered
+    'is-triggered': isTriggered,
+    'is-not-triggered': isNotTriggered,
+    'is-selected': isSelected
   }"
 >
   <div class="dialogue-turn--actor">
