--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -46,7 +46,7 @@
       *ngFor="let event of eventState?.events"
       [isTriggered]="event.thresholdReached"
       [isNotTriggered]="!event.thresholdReached"
-      [isSelected]="event.eventName === eventState?.event.eventName"
+      [isSelected]="event.eventName === eventState?.event?.eventName"
       isConnected="true"
     >
       <p *ngIf="event.activeTrigger && event.thresholdReached">
