fix: small eventname fix

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -169,7 +169,7 @@
                 : {
                     nrTriggeredAreas: activeAreas.length,
                     adminAreaLabelPlural: adminAreaLabelPlural,
-                    eventName: eventState?.event.eventName,
+                    eventName: eventState?.event?.eventName,
                     actionIndicator: actionIndicatorLabel
                   }
           "
@@ -210,7 +210,7 @@
                 : {
                     nrStoppedAreas: stoppedAreas.length,
                     adminAreaLabelPlural: adminAreaLabelPlural,
-                    eventName: eventState?.event.eventName,
+                    eventName: eventState?.event?.eventName,
                     actionIndicator: actionIndicatorLabel
                   }
           "
