feat: emphasize nr of exposed areas AB#15313

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -8,11 +8,13 @@
       [title]="
         ('aggregates-component.header-title-prefix' | translate) +
         ' ' +
-        getHeaderLabel()
+        getNumberAreasExposed() +
+        ' ' +
+        getLabelAreasExposed()
       "
     >
       <ion-label class="aggregate-header-item-label">
-        {{ getHeaderLabel() }}
+        <span class="aggregate-header-item-number">{{ getNumberAreasExposed() }}</span> {{ getLabelAreasExposed() }}
       </ion-label>
       <ion-button
         slot="end"
