--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -6,6 +6,11 @@
   --min-height: 36px;
   --inner-padding-end: 0;
 
+  .aggregate-header-item-number {
+    font-size: 20px;
+    color: #6200EE;
+  }
+
   .aggregate-header-item-label {
     margin: 8px 0;
     font-weight: 600;
