--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -14,7 +14,10 @@
       "
     >
       <ion-label class="aggregate-header-item-label">
-        <span class="aggregate-header-item-number">{{ getNumberAreasExposed() }}</span> {{ getLabelAreasExposed() }}
+        <span class="aggregate-header-item-number">{{
+          getNumberAreasExposed()
+        }}</span>
+        {{ getLabelAreasExposed() }}
       </ion-label>
       <ion-button
         slot="end"
