--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -8,7 +8,7 @@
 
   .aggregate-header-item-number {
     font-size: 20px;
-    color: #6200EE;
+    color: #6200ee;
   }
 
   .aggregate-header-item-label {
