--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -1,37 +1,44 @@
-<div>
-  <ion-header class="ion-no-border">
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button title="Home">
-          <ion-icon name="apps" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-      <app-user-state [isLoggedIn]="true"></app-user-state>
-      <ion-row slot="end" class="ion-align-items-center">
-        <ion-col size="auto">
-          <app-logos></app-logos>
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button title="Home">
+        <ion-icon name="apps" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <app-user-state [isLoggedIn]="true"></app-user-state>
+    <ion-row slot="end" class="ion-align-items-center">
+      <ion-col size="auto">
+        <app-logos></app-logos>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+  <app-disclaimer-toolbar></app-disclaimer-toolbar>
+</ion-header>
+
+<ion-content class="ion-padding-horizontal">
+  <ng-container *ngIf="activationLogs">
+    <div
+      *ngIf="activationLogs['headerData']"
+      id="table-header"
+      class="ion-no-padding"
+    >
+      <ion-row class="table-row">
+        <ion-col
+          *ngFor="let header of activationLogs['headerData']"
+          class="table-cell"
+        >
+          <ion-text
+            ><strong>{{ header }}</strong></ion-text
+          >
         </ion-col>
       </ion-row>
-    </ion-toolbar>
-    <app-disclaimer-toolbar></app-disclaimer-toolbar>
-  </ion-header>
-
-  <div class="activation-log-container">
-    <table class="ion-text" *ngIf="activationLogs" ngClass="ion-margin">
-      <thead *ngIf="activationLogs['headerData']">
-        <tr>
-          <th *ngFor="let header of activationLogs['headerData']">
-            {{ header }}
-          </th>
-        </tr>
-      </thead>
-      <tbody *ngIf="activationLogs['rowsData']">
-        <tr *ngFor="let row of activationLogs['rowsData']">
-          <td *ngFor="let data of row">
-            {{ data }}
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+    </div>
+    <div *ngIf="activationLogs['rowsData']" id="table-body">
+      <ion-row *ngFor="let row of activationLogs['rowsData']" class="table-row">
+        <ion-col class="table-cell" *ngFor="let data of row">
+          <ion-text>{{ data }}</ion-text>
+        </ion-col>
+      </ion-row>
+    </div>
+  </ng-container>
+</ion-content>
