--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -6,7 +6,7 @@
     <ion-header>
       <ion-toolbar color="ibf-no-alert-primary">
         <ion-buttons slot="end">
-          <ion-icon name="chevron-back-outline"></ion-icon>
+          <ion-icon name="chevron-down-outline"></ion-icon>
         </ion-buttons>
         <ion-title data-test="layers-toggle">Layers</ion-title>
       </ion-toolbar>
@@ -25,7 +25,7 @@
       <ion-header>
         <ion-toolbar color="ibf-no-alert-primary">
           <ion-buttons slot="end">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </ion-buttons>
           <ion-title>Layers</ion-title>
         </ion-toolbar>
