--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -122,7 +122,7 @@
 }
 .trigger-popup-no {
   .leaflet-popup-tip {
-    background-color: var(--ion-color-ibf-gray);
+    background-color: var(--ion-color-ibf-no-alert-primary);
   }
 }
 .trigger-popup-min {
