feat: select area on click AB#15402

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.scss
@@ -33,3 +33,10 @@ ion-content {
 ion-checkbox {
   margin-inline-end: 8px !important;
 }
+
+.clickable-area {
+  :hover {
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
