--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -175,7 +175,7 @@
           "
         ></p>
         <ul>
-          <li *ngFor="let area of activeAreas">
+          <li *ngFor="let area of activeAreas" class="clickable-area" (click)="selectArea(area)">
             <p>
               {{ area.name }} (<span
                 *ngIf="actionIndicatorNumberFormat === 'decimal0'"
