feat: zoom to selected area in map AB#15405

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -266,7 +266,9 @@
           color="ibf-primary"
           expand="block"
         >
-          <span class="ion-hide-sm-down">{{ 'chat-component.generic.revert-selection' | translate}}</span>
+          <span class="ion-hide-sm-down">{{
+            'chat-component.generic.revert-selection' | translate
+          }}</span>
           <ion-icon name="arrow-back" slot="start"></ion-icon>
         </ion-button>
       </app-dialogue-turn>
@@ -283,7 +285,9 @@
         color="ibf-primary"
         expand="block"
       >
-        <span class="ion-hide-sm-down">{{ 'chat-component.generic.revert-selection' | translate}}</span>
+        <span class="ion-hide-sm-down">{{
+          'chat-component.generic.revert-selection' | translate
+        }}</span>
         <ion-icon name="arrow-back" slot="start"></ion-icon>
       </ion-button>
       <form (submit)="submitEapAction(area.placeCode)">
