feat: change btn color for stopped bubble AB#15492

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -251,7 +251,7 @@
         <ion-button
           *ngIf="placeCode"
           (click)="revertAreaSelection()"
-          color="ibf-primary"
+          color="ibf-no-alert-primary"
           size="small"
           class="ion-float-right"
         >
