--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -7,25 +7,32 @@
     <ion-col size-lg="8" size-md="8" size-xs="8" class="ion-no-padding">
       <ion-item
         lines="none"
-        class="component-title-item ion-no-padding ion-no-margin ion-align-items-start"
+        class="component-title-item ion-padding-left ion-no-margin ion-align-items-start"
         color="ibf-secondary"
       >
-        <ion-label class="ion-padding-horizontal">
-          <strong>
-            {{ 'areas-of-focus-summary-component.title' | translate }}
-          </strong>
-        </ion-label>
+        <ion-col>
+          <ion-label class="areas-of-focus--title">
+            <strong>
+              {{ 'areas-of-focus-summary-component.title' | translate }}
+            </strong>
+          </ion-label>
+          <ion-label class="areas-of-focus--subtitle">
+            <ion-text style="font-size: 10px">
+              {{ 'areas-of-focus-summary-component.aof-subtitle' | translate }}
+            </ion-text>
+          </ion-label>
+        </ion-col>
       </ion-item>
     </ion-col>
     <ion-col size-lg="4" size-md="4" size-xs="4" class="ion-no-padding">
       <ion-item
         lines="none"
-        class="component-title-item ion-no-padding ion-no-margin ion-align-items-end ion-text-center"
+        class="component-title-item ion-padding-left ion-no-margin ion-align-items-end"
         color="ibf-secondary"
       >
-        <ion-label>
+        <ion-label class="areas-of-focus--subtitle">
           <ion-text style="font-size: 10px">
-            {{ 'areas-of-focus-summary-component.tasks-title' | translate }}
+            {{ 'areas-of-focus-summary-component.tasks-subtitle' | translate }}
           </ion-text>
         </ion-label>
       </ion-item>
