--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -4,8 +4,11 @@
     --inner-padding-end: 0;
     min-height: 30px;
 
-    ion-label {
+    .areas-of-focus--title {
       margin-top: 5px;
+    }
+
+    .areas-of-focus--subtitle {
       margin-bottom: 5px;
     }
 
