feat: reduce size of current point AB#15511

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -206,7 +206,7 @@
 
 .typhoon-track-icon-latest {
   background: var(--ion-color-ibf-primary)
-    url('/assets/icons/TyphoonHurricaneCyclone_Track.svg') center;
+    url('/assets/icons/TyphoonHurricaneCyclone_Track.svg') center no-repeat;
 }
 
 .ibf-popover {
