--- a/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.scss
@@ -2,6 +2,10 @@ ion-label[position='stacked'] {
   --color: var(--ion-color-ibf-no-alert-primary);
 }
 
-ion-button {
+.login-button {
   --background: var(--ion-color-ibf-no-alert-primary);
+}
+
+.eye-button {
+  --color: var(--ion-color-ibf-no-alert-primary);
 }
