--- a/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/login-form/login-form.component.html
@@ -22,10 +22,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="stacked">Password</ion-label>
-    <div
-      style="display: flex; width: 100%"
-      class="ion-align-items-center"
-    >
+    <div style="display: flex; width: 100%" class="ion-align-items-center">
       <ion-input
         [(ngModel)]="model.password"
         name="password"
