--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -1,6 +1,63 @@
 <div>
   <ion-grid class="ion-no-padding">
-    <ion-item
+    <ion-row
+      class="component-title"
+      style="background: var(--ion-color-ibf-secondary)"
+      data-test="action-title"
+    >
+      <ion-col size-lg="10" size-md="10" size-xs="10" class="ion-no-padding">
+        <ion-item
+          lines="none"
+          class="component-title-item ion-padding-left ion-no-margin ion-align-items-start"
+          color="ibf-secondary"
+        >
+          <ion-col>
+            <ion-label
+              class="aggregates--title"
+              data-test="aggregate-title"
+              [title]="
+                ('aggregates-component.header-title-prefix' | translate) +
+                ' ' +
+                getNumberAreasExposed() +
+                ' ' +
+                getLabelAreasExposed().headerLabel
+              "
+            >
+              <strong>
+                <ion-text color="ibf-primary" style="font-size: 20px">{{
+                  getNumberAreasExposed()
+                }}</ion-text>
+                {{ getLabelAreasExposed().headerLabel }}
+              </strong>
+            </ion-label>
+            <ion-label class="aggregates--subtitle">
+              <ion-text style="font-size: 12px">
+                {{ getLabelAreasExposed().subHeaderLabel }}
+              </ion-text>
+            </ion-label>
+          </ion-col>
+        </ion-item>
+      </ion-col>
+      <ion-col size-lg="2" size-md="2" size-xs="2" class="ion-no-padding">
+        <ion-item
+          lines="none"
+          class="component-title-item ion-padding-left ion-no-margin ion-align-items-start"
+          color="ibf-secondary"
+        >
+          <ion-button
+            fill="clear"
+            *ngIf="placeCode"
+            color="light"
+            class="place-code-reset-button"
+            (click)="clearPlaceCode()"
+          >
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <!-- <ion-item
       color="ibf-secondary"
       lines="none"
       class="aggregate-header-item"
@@ -13,23 +70,35 @@
         getLabelAreasExposed()
       "
     >
-      <ion-label class="aggregate-header-item-label">
-        <span class="aggregate-header-item-number">{{
-          getNumberAreasExposed()
-        }}</span>
-        {{ getLabelAreasExposed() }}
-      </ion-label>
-      <ion-button
-        slot="end"
-        fill="clear"
-        *ngIf="placeCode"
-        color="light"
-        class="place-code-reset-button"
-        (click)="clearPlaceCode()"
-      >
-        <ion-icon name="close" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-item>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-label class="aggregate-header-item-label">
+              <span class="aggregate-header-item-number">{{
+                getNumberAreasExposed()
+              }}</span>
+              {{ getLabelAreasExposed().headerLabel }}
+            </ion-label>
+            <ion-label>
+              {{ getLabelAreasExposed().subHeaderLabel }}
+            </ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-button
+              slot="end"
+              fill="clear"
+              *ngIf="placeCode"
+              color="light"
+              class="place-code-reset-button"
+              (click)="clearPlaceCode()"
+            >
+              <ion-icon name="close" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item> -->
+
     <div data-test="aggregate-list">
       <ion-row
         *ngFor="let indicator of indicators"
