--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -1,20 +1,20 @@
-.place-code-reset-button {
-  margin-left: 8px;
+.component-title {
+  .component-title-item {
+    --inner-padding-end: 0;
+    height: 54px;
+
+    .aggregates--title {
+      margin-top: 5px;
+    }
+
+    .aggregates--subtitle {
+      margin-bottom: 5px;
+    }
+  }
 }
 
-.aggregate-header-item {
-  --min-height: 36px;
-  --inner-padding-end: 0;
-
-  .aggregate-header-item-number {
-    font-size: 20px;
-    color: var(--ion-color-ibf-primary);
-  }
-
-  .aggregate-header-item-label {
-    margin: 8px 0;
-    font-weight: 600;
-  }
+.place-code-reset-button {
+  margin-left: 8px;
 }
 
 .aggregate-item,
