--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -1,8 +1,7 @@
 .component-title {
   .component-title-item {
-    --background: transparent;
     --inner-padding-end: 0;
-    min-height: 30px;
+    height: 48px;
 
     .areas-of-focus--title {
       margin-top: 5px;
