fix: only show action summary if trigger event AB#15832

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventState?.activeEvent">
+<ng-container *ngIf="eventState?.event?.thresholdReached">
   <ion-row
     class="component-title"
     color="ibf-secondary"
