feat: reactivate trigger frontend AB#15753

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -272,6 +272,17 @@
                   }
           "
         ></p>
+        <ion-button
+          (click)="openToggleTriggerPopup(area, false)"
+          [disabled]="!area.activeTrigger"
+          color="ibf-no-alert-primary"
+          expand="block"
+          [innerHTML]="
+            'chat-component.generic.reactivate-trigger-popup.' +
+              disasterTypeService.hasEap(disasterType.disasterType) +
+              '.header' | translate
+          "
+        ></ion-button>
       </app-dialogue-turn>
     </ng-container>
     <app-dialogue-turn
@@ -408,14 +419,14 @@
         </ion-row>
       </form>
       <ion-button
-        (click)="openStopTriggerPopup(area)"
+        (click)="openToggleTriggerPopup(area, true)"
         [disabled]="!area.activeTrigger"
         color="ibf-primary"
         expand="block"
         [innerHTML]="
-          'chat-component.' +
-            disasterTypeName +
-            '.active-event.stop-trigger-button' | translate
+          'chat-component.generic.stop-trigger-popup.' +
+            disasterTypeService.hasEap(disasterType.disasterType) +
+            '.header' | translate
         "
       ></ion-button>
     </app-dialogue-turn>
