--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -5,45 +5,40 @@
       style="background: var(--ion-color-ibf-secondary)"
       data-test="action-title"
     >
-      <ion-col size-lg="10" size-md="10" size-xs="10" class="ion-no-padding">
+      <ion-col class="ion-no-padding">
         <ion-item
           lines="none"
-          class="component-title-item ion-padding-left ion-no-margin ion-align-items-start"
+          class="component-title-item ion-no-padding ion-no-margin ion-align-items-start"
+          [ngClass]="
+            getLabelAreasExposed().subHeaderLabel === ''
+              ? 'ion-text-center'
+              : 'ion-text-left'
+          "
           color="ibf-secondary"
         >
-          <ion-col>
-            <ion-label
-              class="aggregates--title"
-              data-test="aggregate-title"
-              [title]="
-                ('aggregates-component.header-title-prefix' | translate) +
-                ' ' +
-                getNumberAreasExposed() +
-                ' ' +
-                getLabelAreasExposed().headerLabel
-              "
-            >
-              <strong>
-                <ion-text color="ibf-primary" style="font-size: 20px">{{
-                  getNumberAreasExposed()
-                }}</ion-text>
-                {{ getLabelAreasExposed().headerLabel }}
-              </strong>
-            </ion-label>
-            <ion-label class="aggregates--subtitle">
-              <ion-text style="font-size: 12px">
-                {{ getLabelAreasExposed().subHeaderLabel }}
-              </ion-text>
-            </ion-label>
-          </ion-col>
-        </ion-item>
-      </ion-col>
-      <ion-col size-lg="2" size-md="2" size-xs="2" class="ion-no-padding">
-        <ion-item
-          lines="none"
-          class="component-title-item ion-padding-left ion-no-margin ion-align-items-start"
-          color="ibf-secondary"
-        >
+          <ion-label
+            class="aggregates--title ion-no-margin"
+            [ngClass]="
+              getLabelAreasExposed().subHeaderLabel === ''
+                ? 'ion-no-padding'
+                : 'ion-padding-start'
+            "
+            data-test="aggregate-title"
+            [title]="
+              ('aggregates-component.header-title-prefix' | translate) +
+              ' ' +
+              getNumberAreasExposed() +
+              ' ' +
+              getLabelAreasExposed().headerLabel
+            "
+          >
+            <strong>
+              <ion-text color="ibf-primary" style="font-size: 20px">{{
+                getNumberAreasExposed()
+              }}</ion-text>
+              {{ getLabelAreasExposed().headerLabel }}
+            </strong>
+          </ion-label>
           <ion-button
             fill="clear"
             *ngIf="placeCode"
@@ -53,6 +48,19 @@
           >
             <ion-icon name="close" slot="icon-only"></ion-icon>
           </ion-button>
+        </ion-item>
+        <ion-item
+          lines="none"
+          class="component-title-item ion-no-padding ion-no-margin ion-align-items-start"
+          color="ibf-secondary"
+        >
+          <ion-label
+            class="aggregates--subtitle ion-no-margin ion-padding-start"
+          >
+            <ion-text style="font-size: 12px">
+              {{ getLabelAreasExposed().subHeaderLabel }}
+            </ion-text>
+          </ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
