--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -1,7 +1,11 @@
 .component-title {
   .component-title-item {
     --inner-padding-end: 0;
-    height: 27px;
+    height: 48px;
+  }
+  .aggregate--title {
+    width: 100%;
+    display: contents;
   }
 }
 
